--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin:0;
 }
 
 .header-nav {
@@ -137,9 +138,19 @@ img {
   justify-content: space-between;
 }
 .welcome-wrap {
-  width: 65%;
+  width: 50%;
   justify-content: space-around;
-  height: calc(100vh - var(--headerHeight) - 40px);
+  height: calc(100vh - var(--headerHeight));
+  background: var(--color1);
+  margin: 0px;
+  padding:20px;
+}
+.desktop-headshot {
+  width: 50%;
+  min-height: calc(100vh - var(--headerHeight));
+  height: auto;
+  justify-content: center;
+  align-items: center;
 }
 .page-main {
   box-sizing: border-box;
@@ -155,15 +166,16 @@ img {
   padding: 0 var(--centerNavWidth) 0 var(--centerNavWidth);
 }
 .home-page {
-  background-image: url("/images/pineapple.png");
+  background-image: url("/images/aboutBack.jpg");
   justify-content: space-between;
-  padding: 30px 0;
-  width:75%;
-  background-size: contain;
+  padding: 0;
+  width: 100vh;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: 100%;
   min-height: calc(100vh - var(--headerHeight));
   height: auto;
+  flex-wrap: nowrap;
 }
 .page-welcome {
   font-size: 55px;
@@ -193,9 +205,9 @@ img {
   font-size: 35px;
 }
 .about-passion-wrap {
-  min-height: 500px;
+  min-height: 700px;
   height: auto;
-  width: 100vw;
+  width: 100%;
   background: var(--color1);
 }
 .about-passion-side {
@@ -236,10 +248,10 @@ label {
   width: 100%;
   height: auto;
 }
-input{
+input {
   box-sizing: border-box;
 }
-textarea{
+textarea {
   box-sizing: border-box;
 }
 .contact-input {
@@ -257,7 +269,7 @@ textarea{
   min-height: 500px;
   background-image: url("/images/aboutBack.jpg");
   background-size: cover;
-  width:100%;
+  width: 100%;
   background-attachment: fixed;
   background-position: center;
   justify-content: center;
@@ -287,13 +299,8 @@ textarea{
   width: 30%;
   height: 30px;
 }
-@media only screen and (max-width: 789px) {
-  .page-main {
-    width: 100%;
-  }
-  .welcome-wrap {
-    width: 70%;
-  }
+.page{
+  min-width: 900px;
 }
 @media only screen and (max-width: 450px) {
   body {
@@ -340,7 +347,7 @@ textarea{
     padding: 15px;
     padding-top: 30px;
     background-size: 60%;
-    background-image: url("/images/pineapple.png");
+    background-image: url("/images/aboutBack.jpg");
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: 0%;
@@ -349,9 +356,5 @@ textarea{
     background-attachment: scroll;
     justify-content: center;
     align-items: center;
-  }
-  .welcome-wrap {
-    width: 100%;
-    height: auto;
   }
 }
