updated some skills

--- a/src/App.css
+++ b/src/App.css
@@ -154,7 +154,7 @@ img {
 }
 .page-main {
   box-sizing: border-box;
-  width: 80vw;
+  width: 80%;
   height: auto;
   min-height: inherit;
   justify-content: flex-start;
