everything is filled out now

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   /* --color5: #d1aadf; */
   --color5: #82ddc6;
 
-  --centerNavWidth: 20vw;
+  --centerNavWidth: 20%;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
@@ -79,7 +79,7 @@ p {
   position: relative;
   z-index: 20;
   overflow: visible;
-  width: var(--centerNavWidth);
+  width: 20vw;
   font-size: 28px;
   border-right: solid 1px var(--color1);
   border-left: solid 1px var(--color1);
@@ -154,9 +154,10 @@ img {
 }
 .page-main {
   box-sizing: border-box;
-  width: 80%;
+  width: 70%;
   height: auto;
   min-height: inherit;
+  min-width:500px;
   justify-content: flex-start;
   padding: 0 60px 0 30px;
   text-align: justify;
@@ -224,6 +225,7 @@ img {
   height: 350px;
 }
 .home-introduction {
+  box-sizing:border-box;
   margin: 0;
   width: 100%;
   line-height: 1.4em;
@@ -234,6 +236,7 @@ img {
   text-align: justify;
   font-size: 30px;
   align-self: flex-end;
+  padding:0px 20px 0px 20px;
 }
 .contact-wrap {
   padding: 30px 60px;
@@ -330,7 +333,7 @@ textarea {
     justify-items: space-between;
     align-content: flex-end;
     align-items: center;
-    height: 100vw;
+    height: 100%;
     padding: 20px;
   }
 
@@ -356,5 +359,9 @@ textarea {
     background-attachment: scroll;
     justify-content: center;
     align-items: center;
+  }
+  .page-main {
+    width: 95%;
+    min-width: 0px;
   }
 }
